[project]
name = "dok-api-cli"
version = "0.1.0"
description = "CLI tool for さくらのクラウド 高火力 DOK API"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "pydantic>=2",
    "tomli-w>=1",
    "websockets>=12",
]

[project.scripts]
dok = "dok.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dok"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
